# realreturn

./: README.md
backend/: .gitignore  README.md  package-lock.json  package.json
backend/server/: firebase.js  firestore.js  index.js  jomo_callback.js  leaderboard.js  prove.js  user.js
frontend/: .gitignore  README.md  package-lock.json  package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.css  App.js  config-global.ts  index.css
frontend/src/components/animate/: index.ts
frontend/src/components/datagrid/: CustomDataGrid.tsx
frontend/src/components/label/: Label.tsx  styles.ts
frontend/src/components/nav-section/: types.ts
frontend/src/components/nav-section/vertical/: NavItem.tsx  NavSectionVertical.tsx  styles.tsx
frontend/src/components/settings/drawer/: SettingsDrawer.tsx
frontend/src/components/snackbar/: styles.tsx
frontend/src/components/stepper/: VerticalLinearStepper.tsx
frontend/src/context/: UserContext.tsx
frontend/src/pages/: ConnectWallet.tsx  Home.tsx  NavBar.tsx  Page404.tsx  Prove.tsx
frontend/src/theme/: palette.ts  typography.ts
frontend/src/theme/overrides/: Backdrop.ts  Button.ts
frontend/src/utils/: apirequests.js
wasm-lib/: Cargo.toml
wasm-lib/src/: lib.rs
