[package]
name = "wasm-lib"
version = "0.1.0"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
hyper = { version = "0.14", features = ["client", "http1"] }
bytes = "1.4.0"
serde_json = "1.0"
wasm-bindgen = "0.2.78"
wasm-bindgen-futures = "0.4.37"
js-sys = "0.3.64"
getrandom = { version = "0.2", features = ["js"] }
ws_stream_wasm = {version = "0.7", features = ["tokio_io"]}

rayon = "1.5"
wasm-bindgen-rayon = "1.0"
# async-std = "1"

futures-util = "0.3.28"
futures = "0.3"
webpki-roots = "0.23"

tokio-util = { version = "0.7", features = ["compat"] }
tokio = { version = "1.29.1", features = [
    "rt",
    "macros",
] }

tlsn-core = { git = "https://github.com/chcharcharlie/tlsn", branch="jomo" }
tlsn-prover = { git = "https://github.com/chcharcharlie/tlsn", branch="jomo" }
tlsn-tls-client = { git = "https://github.com/chcharcharlie/tlsn", branch="jomo" }
tlsn-tls-client-async = { git = "https://github.com/chcharcharlie/tlsn", branch="jomo" }
tlsn-utils-aio = { git = "https://github.com/chcharcharlie/tlsn-utils", branch="jomo" }

[dev-dependencies]

[target.'cfg(target_arch = "wasm32")'.dependencies]
parking_lot_core = "=0.8.0"
parking_lot = { version = "0.11.1", features = ["wasm-bindgen"]}

[patch.crates-io.ring]
git="https://github.com/betrusted-io/ring-xous"
branch="0.16.20-cleanup"

[patch.crates-io.ws_stream_wasm]
git="https://github.com/mhchia/ws_stream_wasm"
branch="dev"

[patch.'https://github.com/chcharcharlie/tlsn-utils']
tlsn-utils = { git = 'https://www.github.com/tlsnotary/tlsn-utils.git', rev = "b182066" }
tlsn-utils-aio = { git = 'https://www.github.com/tlsnotary/tlsn-utils.git', rev = "b182066" }

[dependencies.web-sys]
version = "0.3.22"
features = [
  "BinaryType",
  "Blob",
  "ErrorEvent",
  "FileReader",
  "MessageEvent",
  "ProgressEvent",
  "WebSocket",
  "console",
]
